# protoconf

./: .arcconfig  .arclint  .bazelignore  .bazelrc  .drone.yml  .gitignore  .goreleaser.yaml  .versionrc  404.html  BUILD.bazel  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  LICENSE  README.md  RELEASE_TEMPLATE.md  VERSION  WORKSPACE  buf.yaml  codecov.yml  deployment.properties  deps.bzl  generate.go  go.mod  go.sum  index.html  mkdocs.yml  package.json  platforms.bzl  sitemap.xml
.github/: renovate.json
agent/: BUILD.bazel  agent.go  agent_test.go  command.go  command_test.go  kv_agent_impl.go  kv_agent_impl_test.go  kv_agent_rollout_impl.go  kv_agent_rollout_impl_test.go  legacy.go
agent/api/proto/v1/: BUILD.bazel  generate.go  protoconf_service.pb.go  protoconf_service.proto  protoconf_service_grpc.pb.go
agent/config/v1/: agent_config.pb.go  agent_config.proto  generate.go
agent/configmaps/: configmaps.go
agent/dummykv/: dummykv.go
agent/filekv/: filekv.go
agent/otelkv/: otelkv.go
cmd/agent/: BUILD.bazel  main.go
cmd/compiler/: BUILD.bazel  main.go
cmd/exec/: BUILD.bazel  main.go
cmd/inserter/: BUILD.bazel  main.go
cmd/pc4tf/: BUILD.bazel  main.go
cmd/pc4tf/generate/: BUILD.bazel  main.go
cmd/protoconf/: BUILD.bazel  main.go
cmd/server/: BUILD.bazel  main.go
command/: BUILD.bazel  command.go
compiler/: BUILD.bazel  command.go  command_test.go  compiler.go  compiler_test.go  config.go  file_reader.go  filesystem.go  filesystem_js.go  main.go  main_js.go  proto_enum.go  proto_message.go  proto_message_type.go  service.go  starlark_functions.go  starlark_loader.go  template.go
compiler/lib/: BUILD.bazel  compiler.go  compiler_test.go  config.go  filesystem.go  filesystem_js.go  module_service.go  module_service_test.go  progress_bar.go  starlark_functions.go  starlark_loader.go
compiler/lib/outputs/multioutputs/: one.json  three.toml  two.yaml
compiler/lib/parser/: BUILD.bazel  parser.go  parser_test.go
compiler/lib/testdata/mutable_config/: bad_json.materialized_JSON  bad_proto_file.materialized_JSON
compiler/lib/testdata/src/: BUILD.bazel  enum_test.pconf  enum_wrong_types_test.pconf  field_type_any_from_missing_package_test.pconf  field_type_any_test.pconf  load_mutable_test.pconf  loading_err.pconf  main_not_a_function_err.pconf  multioutputs_test.mpconf  mutable_bad_json_err.pconf  mutable_bad_proto_filename_err.pconf  mutable_not_exists_err.pconf  not_a_dict_err.mpconf  not_a_proto_value_err.mpconf  test.proto  test.proto-validator  test_hashable.pconf  uninitialized_msg_test.pconf  validator_ext.pconf  validator_passing_test.pconf  validator_test.pconf
compiler/module/v1/: generate.go  remote_repo.pb.go  remote_repo.proto
compiler/proto/: BUILD.bazel  enum.go  enum_type.go  field.go  map.go  message.go  message_type.go  repeated.go
compiler/starproto/: BUILD.bazel  any.go  enum.go  enum_type.go  field.go  map.go  message.go  message_type.go  repeated.go
compiler/testdata/: BUILD.bazel
compiler/wasm/: BUILD.bazel  main.go
docker/: BUILD.bazel  Dockerfile
examples/: BUILD.bazel
examples/grpc_clients/go_client/: BUILD.bazel  main.go
examples/grpc_clients/java_client/: BUILD.bazel  WORKSPACE
examples/grpc_clients/python_asyncio_client/: BUILD.bazel  WORKSPACE  protoc_grpclib_plugin.py  python_asyncio_client.py  python_grpclib_library.bzl
examples/grpc_clients/ruby_client/: BUILD.bazel  WORKSPACE  ruby_client.rb
examples/grpc_clients/rust_client/: BUILD.bazel  WORKSPACE
examples/mutation/go_client/: BUILD.bazel  main.go
examples/mutation/scripts/: post_mutation.sh  pre_mutation.sh
examples/protoconf/materialized_config/crawler/: simple_crawler.materialized_JSON  text_crawler.materialized_JSON
examples/protoconf/mutable_config/crawler/: extra_crawler.materialized_JSON
examples/protoconf/src/: db_password.pinc
examples/protoconf/src/crawler/: BUILD.bazel  crawler.pb.go  crawler.proto  many_crawlers.mpconf  simple_crawler.pconf  text_crawler.pconf  user_agents.pinc
examples/python_client/: README.md  python_asyncio_client.py  python_client.py
examples/webhooks/: hooks.json  webhook.sh
exec/: BUILD.bazel  command.go  exec.go  exec_test.go  watcher.go
exec/config/: BUILD.bazel  exec_config.pb.go  exec_config.proto
exec/v2/: BUILD.bazel  exec_config.proto
importers/: BUILD.bazel  importers.go  importers_test.go
importers/golang_importer/: BUILD.bazel  command.go  go_proto_files_registry.go  go_to_proto_type.go  golang_importer.go  golang_importer_test.go
importers/terraform_importer/: BUILD.bazel  command.go  providerimporter.go  providerimporter_test.go  schema_to_proto.go  terraform_importer.go  terraform_importer_test.go  test_utils.go
importers/terraform_importer/meta/: BUILD.bazel  meta.go
importers/wktbuilders/: BUILD.bazel  wktbuilders.go
inserter/: BUILD.bazel  inserter.go  inserter_test.go
libkv/: BUILD.bazel  libkv.go  libkv_test.go
libkv/store/: BUILD.bazel
libkv/store/boltdb/: BUILD.bazel  boltdb.go  boltdb_test.go
libkv/store/consul/: BUILD.bazel  consul.go  consul_test.go
libkv/store/etcd/: BUILD.bazel  etcd.go  etcd_test.go
libkv/store/mock/: BUILD.bazel  mock.go
libkv/store/zookeeper/: BUILD.bazel  zookeeper.go  zookeeper_test.go
libkv/testutils/: BUILD.bazel  utils.go
libprotoconf/: BUILD.bazel  file_watcher.go  file_watcher_test.go  kv_watcher.go  libprotoconf.go
mutate/: BUILD.bazel  mutate.go
proto_std_lib/: BUILD.bazel  proto_std_lib.go
proto_std_lib/src/: secret.proto
protostdlib/: BUILD.bazel  proto_std_lib.go
protostdlib/secret/: BUILD.bazel  secret.pb.go
server/: BUILD.bazel  legacy.go  server.go  server_test.go
server/api/proto/v1/: BUILD.bazel  generate.go  protoconf_mutation.pb.go  protoconf_mutation.proto  protoconf_mutation_grpc.pb.go
utils/: BUILD.bazel  binary.go  codec.go  utils.go  utils_test.go
utils/testdata/: embed.go
utils/testdata/bad_proto/mutable_config/: mutation_test.materialized_JSON
utils/testdata/large/: docker-compose.yaml  protoconf-insert-script.sh  providers.tf
utils/testdata/small/: CONFIGSPACE
(+1768 files in other folders)
