load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_library(
    name = "agent",
    srcs = ["agent.go"],
    deps = [
        ":protoconf_service_go_proto",
        "//command:command",
        "//consts:consts",
        "//libprotoconf:libprotoconf",
        "@com_github_mitchellh_cli//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
    importpath = "protoconf.com/agent",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "protoconf_service_go_proto",
    compiler = "@io_bazel_rules_go//proto:go_grpc",
    importpath = "protoconf.com/agent/api/proto/v1/protoconfservice",
    proto = "//agent/api/proto/v1:protoconf_service_proto",
    visibility = ["//visibility:public"],
)
