load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["command.go"],
    importpath = "github.com/protoconf/protoconf/command",
    visibility = ["//visibility:public"],
    deps = [
        "//consts:go_default_library",
        "@com_github_mitchellh_cli//:go_default_library",
    ],
)
