load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "compiler",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["command.go"],
    importpath = "github.com/protoconf/protoconf/compiler",
    visibility = ["//visibility:public"],
    deps = [
        "//compiler/lib:go_default_library",
        "//consts:go_default_library",
        "@com_github_mitchellh_cli//:go_default_library",
        "@net_starlark_go//repl:go_default_library",
        "@net_starlark_go//starlark:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

filegroup(
    name = "testdata",
    srcs = glob(["testdata/**/*"]),
    visibility = ["//visibility:public"],
)
