load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "crawler_proto",
    srcs = ["protoconf/src/crawler/crawler.proto"],
    strip_import_prefix = "protoconf/src/",
    visibility = ["//visibility:public"],
    deps = [
        "//proto_std_lib:secret_proto",
    ],
)

go_proto_library(
    name = "crawler_go_proto",
    compiler = "@io_bazel_rules_go//proto:go_grpc",
    importpath = "protoconf.com/examples/crawler",
    proto = "//examples:crawler_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//proto_std_lib:secret_go_proto",
    ],
)
