load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["importers.go"],
    importpath = "github.com/protoconf/protoconf/importers",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_jhump_protoreflect//desc:go_default_library",
        "@com_github_jhump_protoreflect//desc/builder:go_default_library",
        "@com_github_jhump_protoreflect//desc/protoprint:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["importers_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_jhump_protoreflect//desc/builder:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
