load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "inserter",
    srcs = ["inserter.go"],
    importpath = "protoconf.com/inserter",
    visibility = ["//visibility:public"],
    deps = [
        "//command",
        "//consts",
        "//utils",
        "@com_github_docker_libkv//:go_default_library",
        "@com_github_docker_libkv//store:go_default_library",
        "@com_github_docker_libkv//store/consul:go_default_library",
        "@com_github_docker_libkv//store/zookeeper:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_mitchellh_cli//:go_default_library",
    ],
)
