load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["inserter.go"],
    importpath = "github.com/protoconf/protoconf/inserter",
    visibility = ["//visibility:public"],
    deps = [
        "//command:go_default_library",
        "//consts:go_default_library",
        "//libkv:go_default_library",
        "//libkv/store:go_default_library",
        "//libkv/store/consul:go_default_library",
        "//libkv/store/zookeeper:go_default_library",
        "//utils:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_mitchellh_cli//:go_default_library",
    ],
)
