load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["libkv.go"],
    importpath = "github.com/protoconf/protoconf/libkv",
    visibility = ["//visibility:public"],
    deps = ["//libkv/store:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["libkv_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//libkv/store:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
