load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "file_watcher.go",
        "kv_watcher.go",
        "libprotoconf.go",
    ],
    importpath = "github.com/protoconf/protoconf/libprotoconf",
    visibility = ["//visibility:public"],
    deps = [
        "//consts:go_default_library",
        "//datatypes/proto/v1:go_default_library",
        "//protostdlib/secret:go_default_library",
        "//utils:go_default_library",
        "@com_github_abronan_valkeyrie//:go_default_library",
        "@com_github_abronan_valkeyrie//store:go_default_library",
        "@com_github_abronan_valkeyrie//store/consul:go_default_library",
        "@com_github_abronan_valkeyrie//store/etcd/v2:go_default_library",
        "@com_github_abronan_valkeyrie//store/zookeeper:go_default_library",
        "@com_github_fsnotify_fsnotify//:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:any_go_proto",
    ],
)
