load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["mutate.go"],
    importpath = "github.com/protoconf/protoconf/mutate",
    visibility = ["//visibility:public"],
    deps = [
        "//datatypes/proto/v1:go_default_library",
        "//server/api/proto/v1:go_default_library",
        "//utils:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_jhump_protoreflect//dynamic:go_default_library",
        "@com_github_mitchellh_cli//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
