load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

go_library(
    name = "proto_std_lib",
    srcs = [
        "proto_std_lib.go",
    ],
    importpath = "protoconf.com/protostdlib",
    visibility = ["//visibility:public"],
    deps = [
        ":secret_go_proto",
        "@com_github_golang_protobuf//protoc-gen-go/descriptor:go_default_library",
        "@com_github_jhump_protoreflect//internal:go_default_library",
    ],
)

proto_library(
    name = "secret_proto",
    srcs = ["src/secret.proto"],
    strip_import_prefix = "src/",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "secret_go_proto",
    compiler = "@io_bazel_rules_go//proto:go_grpc",
    importpath = "protoconf.com/protostdlib/secret",
    proto = ":secret_proto",
    visibility = ["//visibility:public"],
)
