load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["proto_std_lib.go"],
    importpath = "github.com/protoconf/protoconf/protostdlib",
    visibility = ["//visibility:public"],
    deps = [
        "//protostdlib/secret:go_default_library",
        "@com_github_jhump_protoreflect//internal:go_default_library",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
    ],
)
