load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "utils",
    srcs = [
        "utils.go",
    ],
    importpath = "protoconf.com/utils",
    visibility = ["//visibility:public"],
    deps = [
        "//consts:consts",
        "//types/proto/v1:protoconf_value_go_proto",
        "@com_github_golang_protobuf//jsonpb:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_jhump_protoreflect//desc/protoparse:go_default_library",
        "@com_github_jhump_protoreflect//dynamic:go_default_library",
    ],
)
