load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "binary.go",
        "codec.go",
        "utils.go",
    ],
    importpath = "github.com/protoconf/protoconf/utils",
    visibility = ["//visibility:public"],
    deps = [
        "//consts:go_default_library",
        "//datatypes/proto/v1:protoconf_value_go_proto",
        "//protostdlib:go_default_library",
        "//protostdlib/secret:go_default_library",
        "@com_github_golang_protobuf//descriptor:go_default_library_gen",
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_jhump_protoreflect//desc:go_default_library",
        "@com_github_jhump_protoreflect//desc/protoparse:go_default_library",
        "@com_github_jhump_protoreflect//dynamic:go_default_library",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
    ],
)
