load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "compiler",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "protoconf.com/cmd/compiler",
    visibility = ["//visibility:private"],
    deps = [
        "//command",
        "//compiler",
    ],
)
