load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "inserter",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "protoconf.com/cmd/inserter",
    visibility = ["//visibility:private"],
    deps = [
        "//command",
        "//inserter",
    ],
)
